egonlang-core/res/examples/valid/let_decl_with_assign_from_fn_expr.eg
let sum: function<tuple<number, number>, number> = (a: number, b: number): number => {
  a + b  
};