egonlang-core/res/examples/invalid/fn_expr_returning_unit.eg
(a: number, b: number): tuple<number, number> => ();

// out: SyntaxError: unexpected ";"; expected: ["\":\""]